[gd_scene load_steps=14 format=2]

[ext_resource path="res://animated_game_title.gd" type="Script" id=1]
[ext_resource path="res://images/thanksFURplayin_bunny_ilikethepixies.png" type="Texture" id=2]
[ext_resource path="res://images/bbunny_title3.png" type="Texture" id=3]
[ext_resource path="res://images/bbunny_title1.png" type="Texture" id=4]
[ext_resource path="res://shiny_material.tres" type="Material" id=5]
[ext_resource path="res://images/bbunny_title2.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 311, 279 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 311, 0, 311, 279 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 622, 0, 311, 279 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 279, 311, 279 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 311, 279, 311, 279 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 622, 279, 311, 279 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="BbunnyTitle1" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 2376, 192 )
texture = ExtResource( 4 )

[node name="BbunnyTitle2" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 696, 1224 )
texture = ExtResource( 6 )

[node name="BbunnyTitle3" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 696, 1528 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1584, 712 )
scale = Vector2( 2.29301, 2.29301 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="StartsStops" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="EndPos1" type="Position2D" parent="StartsStops"]
position = Vector2( 696, 192 )

[node name="EndPos2" type="Position2D" parent="StartsStops"]
position = Vector2( 696, 411 )

[node name="EndPos3" type="Position2D" parent="StartsStops"]
position = Vector2( 696, 680 )

[node name="Tween" type="Tween" parent="."]
